src/objects/Zobj2__c.object
<CustomObject>
    <fields>
        <fullName>Dfield1__c</fullName>
        <label>Dfield1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EField1__c</fullName>
        <label>EField1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PField1__c</fullName>
        <label>PField1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TField1__c</fullName>
        <label>TField1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plfield1__c</fullName>
        <label>plfield1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Zobj2</label>
    <nameField>
        <label>Zobj2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zobj2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>